Simplified code to reflect latest JDK19 improvements