@@ -1,13 +1,14 @@
 package com.itemis.fluffyj.memory.internal.impl;
 
-import static java.lang.foreign.MemorySegment.allocateNative;
+import static java.lang.foreign.SegmentAllocator.newNativeArena;
+import static java.util.Objects.requireNonNull;
 
 import com.itemis.fluffyj.memory.api.FluffySegment;
 
 import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySession;
+import java.lang.foreign.ValueLayout;
 
 /**
  * Default implementation of a segment.
@@ -31,13 +32,12 @@ public abstract class FluffySegmentImpl implements FluffySegment {
      * Allocate new segment.
      *
      * @param initialValue - The new segment will hold this value.
-     * @param layout - The new segment will have this {@link MemoryLayout}.
      * @param session - The new segment will be attached to this session, i. e. if this session is
      *        closed, the segment will not be alive anymore.
      */
-    public FluffySegmentImpl(byte[] initialValue, MemoryLayout layout, MemorySession session) {
-        this(allocateNative(layout, session));
-        backingSeg.asByteBuffer().order(FLUFFY_SEGMENT_BYTE_ORDER).put(initialValue);
+    public FluffySegmentImpl(byte[] initialValue, MemorySession session) {
+        this(newNativeArena(requireNonNull(initialValue, "initialValue").length, requireNonNull(session, "session"))
+            .allocateArray(ValueLayout.JAVA_BYTE, initialValue));
     }
 
     @Override
